Fix memory leaks and enhance resource management with Virtual Threads in the Spring Vision framework